--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,15 +1,19 @@
 body {
   padding-top: 10px;
   text-align: center;
-  background-color: #f0f0f0;
+  background-color: #e6ebff;
+}
+
+.btn{
+  font-size: 10pt;
+}
+
+.form-control{
+  font-size: 9pt;
 }
 
 .container {
   width: 300px;
   padding: 10px;
   text-align: center;
-}
-
-li {
-  text-align: left;
 }
