--- a/popup/popup.css
+++ b/popup/popup.css
@@ -14,6 +14,8 @@ body {
 
 .container {
   width: 300px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   text-align: center;
 }
